# deepgram

./: .env  .env.example  .gitignore  README.md  cal.py  config-bk.json  config-bk1.json  config.json  email_sender.py  google_calendar_availability.py  index.html  law_functions.py  lawfirm_functions.py  main-bk.py  main.py  pyproject.toml  quick_email_test.py  quick_test.py  test_db..py  test_email.py
